syntax = "proto3";
package trading;

import "common.proto";

service Trading {
    rpc new_order (NewRequest) returns (NewReply);
    rpc cxl_order (CxlRequest) returns (CxlReply);
}

message NewRequest {
    string exchange = 1;
    string symbol = 2;
    string side = 3;
    string type = 4;
    double quantity = 5;
    double price = 6;
    string time_in_force = 7;
}

message NewReply {
    string order_id = 1;
    string exchange = 2;
    string symbol = 3;
    string status = 4;
    string side = 5;
    string type = 6;
    double price = 7;
    double quantity = 8;
    double executed = 9;
    string time_in_force = 10;
    repeated common.Fill fills = 11;
}

message CxlRequest {
    string order_id = 3;
    string exchange = 1;
    string symbol = 2;
}

message CxlReply {
    string order_id = 1;
    string exchange = 2;
    string symbol = 3;
    string status = 4;
}
